[gd_scene load_steps=14 format=3 uid="uid://c2loonfps5tts"]

[ext_resource type="Texture2D" uid="uid://be4gc3c5xyjyd" path="res://assets/Archer/Archer.png" id="1_7t8xs"]
[ext_resource type="Script" path="res://Character/scripts/Character.gd" id="1_iqniv"]
[ext_resource type="PackedScene" uid="uid://bcbxssa12nbrv" path="res://Skill/scene/Projectile.tscn" id="2_7eult"]
[ext_resource type="PackedScene" uid="uid://c5jot5117a353" path="res://Effect/scenes/Ghost.tscn" id="3_f3r7g"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r6vky"]
radius = 15.0
height = 42.0

[sub_resource type="Animation" id="Animation_p3s0h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4n8ul"]
resource_name = "attack_1"
step = 0.111111
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.111111, 0.222222, 0.333333, 0.444444, 0.555556, 0.666667, 0.777778, 0.888889),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31, 32]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.777778),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shot"
}]
}

[sub_resource type="Animation" id="Animation_nfw37"]
resource_name = "attack_2"
step = 0.0769231
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0769231, 0.153846, 0.230769, 0.307692, 0.384615, 0.461538, 0.538462, 0.615385, 0.692308, 0.769231, 0.846154, 0.923077),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 36]
}

[sub_resource type="Animation" id="Animation_6d86j"]
resource_name = "idle"
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_13o5h"]
resource_name = "walk"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17, 18, 19]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2acy8"]
_data = {
"RESET": SubResource("Animation_p3s0h"),
"attack_1": SubResource("Animation_4n8ul"),
"attack_2": SubResource("Animation_nfw37"),
"idle": SubResource("Animation_6d86j"),
"walk": SubResource("Animation_13o5h")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_iy1j0"]
radius = 300.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tns5d"]

[node name="Character" type="CharacterBody2D"]
script = ExtResource("1_iqniv")
projectile_node = ExtResource("2_7eult")
ghost_effect = ExtResource("3_f3r7g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_r6vky")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
texture = ExtResource("1_7t8xs")
hframes = 12
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2acy8")
}

[node name="AttackRange" type="Area2D" parent="."]
visible = false

[node name="Range" type="CollisionShape2D" parent="AttackRange"]
self_modulate = Color(1, 1, 1, 0.372549)
z_index = -1
shape = SubResource("CircleShape2D_iy1j0")
one_way_collision_margin = 35.5

[node name="ClickPoint" type="Area2D" parent="."]

[node name="Point" type="CollisionShape2D" parent="ClickPoint"]
shape = SubResource("CircleShape2D_tns5d")

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_ghost_timer_timeout"]
